@@ -35,13 +35,9 @@ def is_ip_address(value):
     """
     Returns True if value is a valid IP address, otherwise False.
     """
-    try:
-        # IPv6 added with Django 1.4
-        from django.core.validators import validate_ipv46_address as ip_validator
-    except ImportError:
-        # Fallback to only IPv4 for older Django
-        from django.core.validators import validate_ipv4_address as ip_validator
-    
+    # IPv6 added with Django 1.4
+    from django.core.validators import validate_ipv46_address as ip_validator
+
     try:
         ip_validator(value)
     except ValidationError:
@@ -151,18 +147,8 @@ class DatabaseWrapper(BaseDatabaseWrapper):
         
         super(DatabaseWrapper, self).__init__(*args, **kwargs)
         
-        try:
-            # django < 1.3
-            self.features = DatabaseFeatures()
-        except TypeError:
-            # django >= 1.3
-            self.features = DatabaseFeatures(self)
-
-        try:
-            self.ops = DatabaseOperations()
-        except TypeError:
-            self.ops = DatabaseOperations(self)
-        
+        self.features = DatabaseFeatures(self)
+        self.ops = DatabaseOperations(self)
         self.client = BaseDatabaseClient(self)
         self.creation = DatabaseCreation(self) 
         self.introspection = DatabaseIntrospection(self)
